--- a/Templates/Per Tenant Extension/.github/workflows/CICD.yaml
+++ b/Templates/Per Tenant Extension/.github/workflows/CICD.yaml
@@ -154,7 +154,7 @@ jobs:
   DeployALDoc:
     needs: [ Initialization, Build ]
     if: always() && needs.Build.result == 'Success' && needs.Initialization.outputs.generateALDocArtifact == 1
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     name: Deploy ALDoc Documentation
     environment:
       name: github-pages
