--- a/Actions/BuildALDoc/action.yaml
+++ b/Actions/BuildALDoc/action.yaml
@@ -9,10 +9,6 @@ inputs:
     description: The GitHub token running the action
     required: false
     default: ${{ github.token }}
-  projects:
-    description: Projects to include in the documentation
-    required: false
-    default: '*'
 runs:
   using: composite
   steps:
@@ -21,11 +17,10 @@ runs:
       id: BuildALDoc
       env:
         _token: ${{ inputs.token }}
-        _projects: ${{ inputs.projects }}
       run: |
         $errorActionPreference = "Stop"; $ProgressPreference = "SilentlyContinue"; Set-StrictMode -Version 2.0
         try {
-          ${{ github.action_path }}/BuildALDoc.ps1 -token $ENV:_token -projects $ENV:_projects
+          ${{ github.action_path }}/BuildALDoc.ps1 -token $ENV:_token
         }
         catch {
           Write-Host "::ERROR::Unexpected error when running action. Error Message: $($_.Exception.Message.Replace("`r",'').Replace("`n",' ')), StackTrace: $($_.ScriptStackTrace.Replace("`r",'').Replace("`n",' <- '))";
